# sandol_user_service

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
config/: settings.py  urls.py  views.py
db/: temp_db_data.json
users/: admin.py  middlewares.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_service_account.py  0003_rename_is_service_account_user_service_account.py
web/keycloak-theme/sandol/: theme.properties
web/keycloak-theme/sandol/login/: error.ftl  login.ftl
web/keycloak-theme/sandol/login/messages/: messages.properties
web/keycloak-theme/sandol/login/resources/css/: sandol-login.css
web/keycloak-theme/sandol/login/templates/: login.ftl  template.ftl
web/login/: index.html
