[tool.poetry]
name = "sandol-user-service"
version = "0.1.0"
description = ""
authors = ["Seokyoung-Hong <tjrdud0330@naver.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.7"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.10"
django-cors-headers = "^4.7.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
